crates/math-core/tests/snapshots/conversion_test__exclamation_mark_spacing.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x=!=x
---
<math>
    <mi>x</mi>
    <mo rspace="0">=</mo>
    <mo form="postfix">!</mo>
    <mo>=</mo>
    <mi>x</mi>
</math>
