crates/math-core/tests/snapshots/conversion_test__fake_prescript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "_1^2 \\frac{a}{b}"
---
<math>
    <msubsup>
        <mrow></mrow>
        <mn>1</mn>
        <mn>2</mn>
    </msubsup>
    <mfrac>
        <mi>a</mi>
        <mi>b</mi>
    </mfrac>
</math>
