crates/math-core/tests/snapshots/conversion_test__fake_prescript_standalone.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: _1^2
---
<math>
    <msubsup>
        <mrow>
        </mrow>
        <mn>1</mn>
        <mn>2</mn>
    </msubsup>
</math>
