crates/math-core/tests/snapshots/conversion_test__fbox.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\fbox{a b}"
---
<math>
    <menclose notation="box">
        <mtext>a b</mtext>
    </menclose>
</math>
