crates/math-core/tests/snapshots/conversion_test__fbox_empty_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\fbox{}"
---
<math>
    <menclose notation="box">
        <mrow></mrow>
    </menclose>
</math>
