crates/math-core/tests/snapshots/conversion_test__fbox_single_token_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x + \\fbox x"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <menclose notation="box">
        <mtext>x</mtext>
    </menclose>
</math>
