crates/math-core/tests/snapshots/conversion_test__forward_ref_snippet1.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\eqref{eq:a}"
---
<math>
    <mtext><a href="#eq:a">(2)</a></mtext>
</math>
